# fmr

./: README.md  changelog.md  fmr.cabal
src/Data/: Field.hs  MField.hs  Property.hs  Record.hs
src/Data/Field/: Object.hs  Observe.hs  Prop.hs  Type.hs  Utils.hs  Watch.hs
src/Data/Field/Prop/: Types.hs
