name:          fmr
version:       0.3
category:      Syntax

synopsis:      Functional mutable records
description:   The generalized, extensible syntax of abstract monadic records.

author:        Andrey Mulik
maintainer:    <work.a.mulik@gmail.com>
bug-reports:   https://github.com/andreymulik/fmr/issues

copyright:     2020-2023 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

tested-with:
  -- lts-7.0
  GHC == 8.0.1,
  -- lts-7.24
  GHC == 8.0.1,
  -- lts-9.21
  GHC == 8.0.2,
  -- lts-11.22
  GHC == 8.2.2,
  -- lts-12.26
  GHC == 8.4.4,
  -- lts-14.27
  GHC == 8.6.5,
  -- lts-18.28
  GHC == 8.10.7,
  -- lts-19.33
  GHC == 9.0.2,
  -- lts-20.26
  GHC == 9.2.8,
  -- lts-21.11
  GHC == 9.4.6,
  -- nightly-2023-09-14
  GHC == 9.6.2

source-repository head
  type: git
  location: https://github.com/andreymulik/fmr

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  
  build-depends:
    base               >= 4.9 && <   5,
    data-default-class >= 0.1 && < 0.2
  
  ghc-options: -Wall -Wcompat
  
  exposed-modules:
    Data.Field
  
  other-modules:
    Data.Field.Prop.Types
    Data.Field.Prop
    Data.Field.Type
    Data.Field.Utils




